--- a/index.html
+++ b/index.html
@@ -5,11 +5,92 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My total Expenses</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
 </head>
 
-<body>
-    <h1>my first Dynamic website</h1>
+<body class="d-flex flex-column align-items-center  mt-4">
+    <!-- --header file-- -->
+    <header>
+        <h1 class="text-info">My monthly Calculation</h1>
+    </header>
+    <!-- --body section-- -->
+    <section class="mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6 gx-5 ">
+                    <img src="images/bank.jpg" class="img-fluid">
+                </div>
+                <div class="col-sm-12 col-lg-6 gx-5 gy-5">
+                    <h3 class="text-center mb-4">Income</h3>
+
+                    <div class="row">
+                        <div class="col">
+                            <p class="text-end">income
+                            <p>
+                        </div>
+                        <div class="col">
+                            <input type="text" name="" id="">
+                        </div>
+                    </div>
+
+
+                    <h3 class="text-center mb-4 ">Expenses</h3>
+
+                    <div class="row">
+                        <div class="col">
+                            <p class="text-end">Food
+
+                        </div>
+                        <div class="col">
+                            <input type="text" name="" id="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p class="text-end">Rent
+
+                        </div>
+                        <div class="col">
+                            <input type="text" name="" id="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p class="text-end">clothes
+
+                        </div>
+                        <div class="col">
+                            <input type="text" name="" id="">
+                            <button class="bg-primary px-5 text-white py-2 rounded mt-4">
+                                calculate</button></p>
+
+                        </div>
+                    </div>
+                    <h2 class="text-center">total expenses: <span>0</span></h2>
+                    <h2 class="text-center">Balance: <span>0</span></h2>
+                    <p class="text-center">save: <input type="text" name="" id=""> % <button
+                            class="bg-primary px-5 text-white py-2 mt-4 rounded">
+                            save</button></p>
+                    <h2 class="text-center">Saving Amount: <span>0</span></h2>
+                    <h2 class="text-center">Remaining Balance: <span>0</span></h2>
+
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+    </section>
+
+    <!-- --scripts file-- -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="calculation.js"></script>
 </body>
 
