my income and spending part added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <p>
                         </div>
                         <div class="col">
-                            <input type="text" name="" id="">
+                            <input type="text" name="" id="income">
                         </div>
                     </div>
 
@@ -45,7 +45,7 @@
 
                         </div>
                         <div class="col">
-                            <input type="text" name="" id="">
+                            <input type="text" name="" id="food">
                         </div>
                     </div>
                     <div class="row">
@@ -54,7 +54,7 @@
 
                         </div>
                         <div class="col">
-                            <input type="text" name="" id="">
+                            <input type="text" name="" id="rent">
                         </div>
                     </div>
                     <div class="row">
@@ -63,14 +63,14 @@
 
                         </div>
                         <div class="col">
-                            <input type="text" name="" id="">
-                            <button class="bg-primary px-5 text-white py-2 rounded mt-4">
+                            <input type="text" name="" id="cloth">
+                            <button class="bg-primary px-5 text-white py-2 rounded mt-4" id="btn1">
                                 calculate</button></p>
 
                         </div>
                     </div>
-                    <h2 class="text-center">total expenses: <span>0</span></h2>
-                    <h2 class="text-center">Balance: <span>0</span></h2>
+                    <h2 class="text-center">total expenses: <span id="totalExpenses">0</span></h2>
+                    <h2 class="text-center">Balance: <span id="remain">0</span></h2>
                     <p class="text-center">save: <input type="text" name="" id=""> % <button
                             class="bg-primary px-5 text-white py-2 mt-4 rounded">
                             save</button></p>
