expensenses and saving calculation added

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
                     </div>
                     <h2 class="text-center">total expenses: <span id="totalExpenses">0</span></h2>
                     <h2 class="text-center">Balance: <span id="remain">0</span></h2>
-                    <p class="text-center">save: <input type="text" name="" id=""> % <button
-                            class="bg-primary px-5 text-white py-2 mt-4 rounded">
+                    <p class="text-center">save: <input type="text" name="" id="percentage"> % <button
+                            class="bg-primary px-5 text-white py-2 mt-4 rounded" id="btn2">
                             save</button></p>
-                    <h2 class="text-center">Saving Amount: <span>0</span></h2>
-                    <h2 class="text-center">Remaining Balance: <span>0</span></h2>
+                    <h2 class="text-center">Saving Amount: <span id="saved">0</span></h2>
+                    <h2 class="text-center">Remaining Balance: <span id="leftAmount">0</span></h2>
 
                 </div>
 
